fix scrolling. page was always overflowing after clipboard change

--- a/www/style.css
+++ b/www/style.css
@@ -34,7 +34,6 @@ body, html {
 
 #tools > .active {
   display: block;
-  flex-basis: 100%;
   flex-grow: 1;
   flex-shrink: 0;
 }
